--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,17 @@
 		<version>2.3.0.M3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>io.agilehandy</groupId>
 	<artifactId>spring-cloud-k8s-config-controller</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>spring-cloud-k8s-config-controller</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-cloud-bus.version>2.2.1.RELEASE</spring-cloud-bus.version>
 	</properties>
 
 	<dependencies>
@@ -35,7 +38,7 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
@@ -43,7 +46,8 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
-		</dependency>-->
+			<version>${spring-cloud-bus.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.fabric8</groupId>
